# jinfer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: status_code.hpp
include/data/: tensor.hpp
include/runtime/: ir.h  runtime_attr.hpp  runtime_datatype.hpp  runtime_ir.hpp  runtime_operand.hpp  runtime_operator.hpp  runtime_param.hpp  store_zip.hpp
source/data/: tensor.cpp
source/runtime/: ir.cpp  load_data.cpp  runtime_attr.cpp  runtime_ir.cpp  store_zip.cpp
test/data/: test_create_tensor.cpp  test_fill_reshape.cpp  test_get_size.cpp  test_get_values.cpp  test_homework.cpp  test_ir.cpp  test_transform.cpp
test/runtime/: test_ir.cpp  test_topo.cpp
